--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <string name="app_name">Free Food</string>
     <string name="ActivityAddFood_insideBuildingHint">where inside the building?</string>
     <string name="ActivityAddFood_description_hint">discription of the food</string>
@@ -7,4 +9,7 @@
     <string name="SignUpActivity_EnterYourName">Please enter your name:</string>
     <string name="SignUpActivity_NameHint">e.g: Albert</string>
     <string name="SignUpActivity_Done">Done</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="hello_world">Hello world!</string>
+
 </resources>
