--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,9 @@
 <resources>
 
     <string name="app_name">Free Food</string>
-    <string name="ActivityAddFood_insideBuildingHint">where inside the building?</string>
-    <string name="ActivityAddFood_description_hint">discription of the food</string>
-    <string name="ActivityAddFood_num_people_hint">לכמה אנשים לדעתך יספיק האוכל?</string>
+    <string name="ActivityAddFood_insideBuildingHint">Where in the building?</string>
+    <string name="ActivityAddFood_description_hint">Which food?</string>
+    <string name="ActivityAddFood_num_people_hint">For how many people?</string>
     <string name="action_settings">Free food</string>
     <string name="SignUpActivity_EnterYourName">Please enter your name:</string>
     <string name="SignUpActivity_NameHint">e.g: Albert</string>
