--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="ActivityAddFood_description_hint">Which food?</string>
     <string name="ActivityAddFood_num_people_hint">For how many people?</string>
     <string name="action_settings">Settings</string>
-    <string name="SignUpActivity_EnterYourName">Please enter your name:</string>
+    <string name="SignUpActivity_EnterYourName">Choose a nickname:</string>
     <string name="SignUpActivity_NameHint">e.g: Albert</string>
     <string name="SignUpActivity_Done">Done</string>
     <string name="title_activity_main">MainActivity</string>
